[package]
name = "sturdy-memory"
version = "0.1.0"
authors = ["Red Carpet <redcarpetoaxaca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono= {version = "0.4.7", features=["serde"]}
pest= "2.0"
pest_derive= "2.0"
